# ovnk-benchmark-mcp

./: README.md  deepdrive.json  metrics-nodes.yml  metrics.yml  ovnk_benchmark_mcp_agent_perf_data2db.py  ovnk_benchmark_mcp_agent_perf_report.py  ovnk_benchmark_mcp_agent_perfdata.py  ovnk_benchmark_mcp_agent_stor2db.py  ovnk_benchmark_mcp_api.py  ovnk_benchmark_mcp_api_clientsession.py  ovnk_benchmark_mcp_client_chat.py  ovnk_benchmark_mcp_client_chat_detailed_info.py  ovnk_benchmark_mcp_command.sh  ovnk_benchmark_mcp_server copy.py  ovnk_benchmark_mcp_server-short.py  ovnk_benchmark_mcp_server.py  ovnk_benchmark_mcp_server_detailed_info.py  pyproject.toml  requirements-api.txt  requirements-detailed-info.txt  requirements.txt
analysis/: __init__.py  ovnk_benchmark_analysis_cluster_stat.py  ovnk_benchmark_performance_analysis.py  ovnk_benchmark_performance_analysis_allovnk.py  ovnk_benchmark_performance_analysis_clusters_api.py  ovnk_benchmark_performance_analysis_overall.py  ovnk_benchmark_performance_analysis_ovs.py  ovnk_benchmark_performance_analysis_pods.py  ovnk_benchmark_performance_analysis_sync.py  ovnk_benchmark_performance_ovnk_deepdrive.py  ovnk_benchmark_performance_unified.py  ovnk_benchmark_performance_utility.py
config/: metrics-latency copy.yml  metrics-latency.yml  metrics-ovn-containers.yml  metrics-ovn.yml  metrics-ovs.yml  metrics-sync.yml  metrics.yml  ovnk_benchmark_config.py
docs/: elt_json2table.md  mcp_client_chat_detailed_info.md  mcp_client_chat_run_system.py  mcp_client_chat_setup_doc.md  ovnk_analysis_performance.md  ovnk_containers_usage.md  ovnk_multus_usage.md  ovnk_ovs_main.py  ovnk_ovs_usage.md  (+3 more)
(+34 files in other folders)
